--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -28,9 +28,9 @@ body {
   box-sizing: border-box;
   @include respond(big-desktop) {
     margin: 0 auto;
-    max-width: 1600px;
+    max-width: 1800px;
 
-    background-image: linear-gradient(to left top, rgba(4, 255, 104, 0.8), rgba(5, 126, 247, 0.8)), url(../../public/images/art-mountain.png);
+    background-color: #f5f3ef;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
