--- a/src/components/molecules/resources-card.module.scss
+++ b/src/components/molecules/resources-card.module.scss
@@ -32,13 +32,14 @@
   &__text {
     position: absolute;
     width: 60%;
-    top: 6rem;
+    top: 32%;
     z-index: 150;
     color: white;
     transition: all 0.2s ease;
     opacity: 1;
     pointer-events: none;
   }
+
   &__link {
     text-align: center;
     color: $blue-500;
@@ -49,9 +50,14 @@
     }
   }
   &__maps {
-    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $blue-500;
+    margin-top: 1rem;
+    margin-right: 2rem;
     position: relative;
-    width: 2.4rem;
+    width: 100%;
     transition: all 0.2s ease-in;
 
     &:hover {
